# titanic_ml_webapp

./: azure-pipelines-1.yml  azure-pipelines-2.yml  azure-pipelines-3.yml  azure-pipelines-4.yml  azure-pipelines-5.yml  azure-pipelines-6.yml  azure-pipelines.yml
api/: Dockerfile  Procfile  main.py  model.pkl  pyproject.toml  requirements.txt
api/model/: model.pkl
manifests/: deployment.yml  service.yml
nb/: ML20-Del2.ipynb  blender.pkl
nb/.ipynb_checkpoints/: ML20-Del2-checkpoint.ipynb
nb/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
nb/catboost_info/learn/: events.out.tfevents
nb/mlruns/0/: meta.yaml
web/: package.json
web/src/: App.js  PersonaliaForm.js  index.js
