[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Marensius Pettersen <marensius.pettersen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.7"
pandas = "^1.1.4"
fastapi = "^0.61.2"
pycaret = "^2.2.1"
pydantic = "^1.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
